Fixed the buttons overlapping

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,5 @@
 .button {
+  display: inline-block;
   background-color: $main;
   box-shadow: 0 2px 8px rgba(0,0,153,0.27);
   font-size: 16px;
