--- a/app/assets/stylesheets/components/_button_red.scss
+++ b/app/assets/stylesheets/components/_button_red.scss
@@ -1,4 +1,5 @@
 .button-red {
+  display: inline-block;
   background-color: red;
   font-size: 12px;
   font-weight: 500;
