--- a/app/assets/stylesheets/components/_button_secondary.scss
+++ b/app/assets/stylesheets/components/_button_secondary.scss
@@ -1,4 +1,5 @@
 .button-secondary {
+  display: inline-block;
   background-color: #e5a60e;
   box-shadow: 0 2px 8px rgba(229,166,14,0.27);
   font-size: 16px;
